CMF 1.5.1beta (unreleased)

  New Features

    - profiles: Moved 'default' profile to CMFDefault.
      Using the new 'importVarious' handler this profile now allows to create
      CMF sites identical to those created with manage_addCMFSite. 

    - CMFDefault: Added 'importVarious' setup handler.
      This provisional handler will be removed again as soon as full handlers
      are implemented for these steps.

    - CachePolicyManager: You can now set a ETag using a TALES expression
      (http://collector.zope.org/CMF/236) 

    - RegistrationTool: The regular expression that limits what people
      can put in as a valid member ID is now configurable TTW in the
      portal_registration tool (http://collector.zope.org/CMF/117)

  Bug Fixes

    - FSObject: Ensure that a cache manager association on a Filesystem-based
      object in the Skins Tool gets applied to the customized object in the
      ZODB upon customization. (http://www.zope.org/Collectors/CMF/304)

    - TypesTool: Changed the way available factory_type_informations are
      presented on the dropdown list when adding a new type from a 
      filesystem FTI to the Types Tool. The new representation includes
      the "id" as set in the FTI instead of just the product name and the
      meta_type. (http://www.zope.org/Collectors/CMF/49)

    - CMFSetup: Fixed import of workflow bindings.
      The 'workflow' import step has to be run after the 'typeinfo' step.
      (http://collector.zope.org/CMF/265)

    - CMFCore.CatalogTool: Take into account query restrictions on
      'effective' or 'expires' attributes during a search.
      (http://collector.zope.org/CMF/120)

    - WorkflowTool: Fixed 'setChainForPortalTypes'.
      If 'chain' was an empty string, it wasn't set correctly.

    - FSFile, FSImage: Made available to caching policy manager as
      standard content. (http://collector.zope.org/CMF/299)

    - FSDTMLMethod: Small code cleanup to remove duplicate variable